# Sound-Proccesor

./: .gitignore  CMakeLists.txt  CmakeLists.txt  a.out  command_line_parser.cpp  command_line_parser.hpp  config_parser.cpp  config_parser.hpp  converter.cpp  converter.hpp  helper.cpp  helper.hpp  interface.cpp  interface.hpp  main.cpp  parser.cpp  parser.hpp  template_factory.hpp  token.txt
cfg_parser/: cfg_parser.cpp  cfg_parser.hpp
cl/: cl_parser.cpp  cl_parser.hpp  converters_description.json
convertors/: convertor_create.cpp  convertor_errors.cpp  convertor_errors.hpp  convertors_interface.hpp  double.cpp  double.hpp  mix.cpp  mix.hpp  mute.cpp  mute.hpp
errors/: io_errors.cpp  io_errors.hpp
processor/: processor.cpp  processor.hpp
wav/: errors.cpp  errors.hpp  reader.cpp  reader.hpp  types.hpp  writer.cpp  writer.hpp
